카카오 클론코딩 - 1

--- a/웹사이트 제작 연습/kakaocorp.com/index.html
+++ b/웹사이트 제작 연습/kakaocorp.com/index.html
@@ -23,8 +23,130 @@
             </div>
             <div id="IconMenu">
                 <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24"><path d="M0 0h24v24H0z" fill="none"/><path d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"/></svg>
+                <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-1 17.93c-3.95-.49-7-3.85-7-7.93 0-.62.08-1.21.21-1.79L9 15v1c0 1.1.9 2 2 2v1.93zm6.9-2.54c-.26-.81-1-1.39-1.9-1.39h-1v-3c0-.55-.45-1-1-1H8v-2h2c.55 0 1-.45 1-1V7h2c1.1 0 2-.9 2-2v-.41c2.93 1.19 5 4.06 5 7.41 0 2.08-.8 3.97-2.1 5.39z"/></svg>
+                <svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" height="24" viewBox="0 0 24 24" width="24"><g><path d="M0,0h24v24H0V0z" fill="none"/></g><g><g><g><path d="M14,2c1.82,0,3.53,0.5,5,1.35C16.01,5.08,14,8.3,14,12s2.01,6.92,5,8.65C17.53,21.5,15.82,22,14,22C8.48,22,4,17.52,4,12 S8.48,2,14,2z"/></g></g></g></svg>
             </div>
         </div>
     </nav>
+    <div id="Contents">
+        <div id="Header">
+            <div class="_Title">
+                📅 오늘의 푸드스<br><span class="_Date">1월 3일 화요일 소식입니다</span>
+            </div>
+        </div>
+        <div id="Middle">
+            <div class="item">
+                <div class="card">
+                    <div class="Title">
+                        <div class="Top">
+                            <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24"><path d="M0 0h24v24H0z" fill="none"/><path d="M11 9H9V2H7v7H5V2H3v7c0 2.12 1.66 3.84 3.75 3.97V22h2.5v-9.03C11.34 12.84 13 11.12 13 9V2h-2v7zm5-3v8h2.5v8H21V2c-2.76 0-5 2.24-5 4z"/></svg>
+                            <span class="Balloon">오늘의 음식</span>
+                        </div>
+                    </div>
+                    <div class="Photo">
+                        <div class="Title">달달한 메이플 시럽과 함께<br>팬케이크 어떠신가요?</div>
+                        <div class="Tag"><span>#당충전</span><span>#펜케이크</span><span>#메이플 시럽</span><span>#간단한 식사</span></div>
+                        <div class="Image">
+                            <img src="./static/images/photo1.jpg">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <div class="card">
+                    <div class="Title">
+                        <div class="Top">
+                            <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24"><path d="M0 0h24v24H0z" fill="none"/><path d="M11 9H9V2H7v7H5V2H3v7c0 2.12 1.66 3.84 3.75 3.97V22h2.5v-9.03C11.34 12.84 13 11.12 13 9V2h-2v7zm5-3v8h2.5v8H21V2c-2.76 0-5 2.24-5 4z"/></svg>
+                            <span class="Balloon">오늘의 음식</span>
+                            <span class="Date">2023.01.02</span>
+                        </div>
+                    </div>
+                    <div class="Photo">
+                        <div class="Title">달달한 메이플 시럽과 함께<br>팬케이크 어떠신가요?</div>
+                        <div class="Tag"><span>#당충전</span><span>#펜케이크</span><span>#메이플 시럽</span><span>#간단한 식사</span></div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="Title">
+                        <div class="Top">
+                            <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24"><path d="M0 0h24v24H0z" fill="none"/><path d="M11 9H9V2H7v7H5V2H3v7c0 2.12 1.66 3.84 3.75 3.97V22h2.5v-9.03C11.34 12.84 13 11.12 13 9V2h-2v7zm5-3v8h2.5v8H21V2c-2.76 0-5 2.24-5 4z"/></svg>
+                            <span class="Balloon">오늘의 음식</span>
+                            <span class="Date">2023.01.02</span>
+                        </div>
+                    </div>
+                    <div class="Photo">
+                        <div class="Title">달달한 메이플 시럽과 함께<br>팬케이크 어떠신가요?</div>
+                        <div class="Tag"><span>#당충전</span><span>#펜케이크</span><span>#메이플 시럽</span><span>#간단한 식사</span></div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="Title">
+                        <div class="Top">
+                            <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24"><path d="M0 0h24v24H0z" fill="none"/><path d="M11 9H9V2H7v7H5V2H3v7c0 2.12 1.66 3.84 3.75 3.97V22h2.5v-9.03C11.34 12.84 13 11.12 13 9V2h-2v7zm5-3v8h2.5v8H21V2c-2.76 0-5 2.24-5 4z"/></svg>
+                            <span class="Balloon">오늘의 음식</span>
+                            <span class="Date">2023.01.02</span>
+                        </div>
+                    </div>
+                    <div class="Photo">
+                        <div class="Title">달달한 메이플 시럽과 함께<br>팬케이크 어떠신가요?</div>
+                        <div class="Tag"><span>#당충전</span><span>#펜케이크</span><span>#메이플 시럽</span><span>#간단한 식사</span></div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="Title">
+                        <div class="Top">
+                            <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24"><path d="M0 0h24v24H0z" fill="none"/><path d="M11 9H9V2H7v7H5V2H3v7c0 2.12 1.66 3.84 3.75 3.97V22h2.5v-9.03C11.34 12.84 13 11.12 13 9V2h-2v7zm5-3v8h2.5v8H21V2c-2.76 0-5 2.24-5 4z"/></svg>
+                            <span class="Balloon">오늘의 음식</span>
+                            <span class="Date">2023.01.02</span>
+                        </div>
+                    </div>
+                    <div class="Photo">
+                        <div class="Title">달달한 메이플 시럽과 함께<br>팬케이크 어떠신가요?</div>
+                        <div class="Tag"><span>#당충전</span><span>#펜케이크</span><span>#메이플 시럽</span><span>#간단한 식사</span></div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="Title">
+                        <div class="Top">
+                            <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24"><path d="M0 0h24v24H0z" fill="none"/><path d="M11 9H9V2H7v7H5V2H3v7c0 2.12 1.66 3.84 3.75 3.97V22h2.5v-9.03C11.34 12.84 13 11.12 13 9V2h-2v7zm5-3v8h2.5v8H21V2c-2.76 0-5 2.24-5 4z"/></svg>
+                            <span class="Balloon">오늘의 음식</span>
+                            <span class="Date">2023.01.02</span>
+                        </div>
+                    </div>
+                    <div class="Photo">
+                        <div class="Title">달달한 메이플 시럽과 함께<br>팬케이크 어떠신가요?</div>
+                        <div class="Tag"><span>#당충전</span><span>#펜케이크</span><span>#메이플 시럽</span><span>#간단한 식사</span></div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="Title">
+                        <div class="Top">
+                            <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24"><path d="M0 0h24v24H0z" fill="none"/><path d="M11 9H9V2H7v7H5V2H3v7c0 2.12 1.66 3.84 3.75 3.97V22h2.5v-9.03C11.34 12.84 13 11.12 13 9V2h-2v7zm5-3v8h2.5v8H21V2c-2.76 0-5 2.24-5 4z"/></svg>
+                            <span class="Balloon">오늘의 음식</span>
+                            <span class="Date">2023.01.02</span>
+                        </div>
+                    </div>
+                    <div class="Photo">
+                        <div class="Title">달달한 메이플 시럽과 함께<br>팬케이크 어떠신가요?</div>
+                        <div class="Tag"><span>#당충전</span><span>#펜케이크</span><span>#메이플 시럽</span><span>#간단한 식사</span></div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="Title">
+                        <div class="Top">
+                            <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24"><path d="M0 0h24v24H0z" fill="none"/><path d="M11 9H9V2H7v7H5V2H3v7c0 2.12 1.66 3.84 3.75 3.97V22h2.5v-9.03C11.34 12.84 13 11.12 13 9V2h-2v7zm5-3v8h2.5v8H21V2c-2.76 0-5 2.24-5 4z"/></svg>
+                            <span class="Balloon">오늘의 음식</span>
+                            <span class="Date">2023.01.02</span>
+                        </div>
+                    </div>
+                    <div class="Photo">
+                        <div class="Title">달달한 메이플 시럽과 함께<br>팬케이크 어떠신가요?</div>
+                        <div class="Tag"><span>#당충전</span><span>#펜케이크</span><span>#메이플 시럽</span><span>#간단한 식사</span></div>
+                    </div>
+                </div>
+                
+            </div>
+        </div>
+    </div>
 </body>
 </html>
